[gd_scene load_steps=76 format=2]

[ext_resource path="res://player/player.gd" type="Script" id=1]
[ext_resource path="res://player/player_spritesheet.png" type="Texture" id=2]

[sub_resource type="AtlasTexture" id=20]
atlas = ExtResource( 2 )
region = Rect2( 0, 288, 24, 24 )

[sub_resource type="AtlasTexture" id=21]
atlas = ExtResource( 2 )
region = Rect2( 24, 288, 24, 24 )

[sub_resource type="AtlasTexture" id=22]
atlas = ExtResource( 2 )
region = Rect2( 0, 336, 24, 24 )

[sub_resource type="AtlasTexture" id=23]
atlas = ExtResource( 2 )
region = Rect2( 48, 336, 24, 24 )

[sub_resource type="AtlasTexture" id=24]
atlas = ExtResource( 2 )
region = Rect2( 72, 336, 24, 24 )

[sub_resource type="AtlasTexture" id=25]
atlas = ExtResource( 2 )
region = Rect2( 24, 336, 24, 24 )

[sub_resource type="AtlasTexture" id=26]
atlas = ExtResource( 2 )
region = Rect2( 0, 312, 24, 24 )

[sub_resource type="AtlasTexture" id=27]
atlas = ExtResource( 2 )
region = Rect2( 24, 312, 24, 24 )

[sub_resource type="AtlasTexture" id=28]
atlas = ExtResource( 2 )
region = Rect2( 48, 312, 24, 24 )

[sub_resource type="AtlasTexture" id=29]
atlas = ExtResource( 2 )
region = Rect2( 72, 312, 24, 24 )

[sub_resource type="AtlasTexture" id=30]
atlas = ExtResource( 2 )
region = Rect2( 96, 312, 24, 24 )

[sub_resource type="AtlasTexture" id=31]
atlas = ExtResource( 2 )
region = Rect2( 120, 312, 24, 24 )

[sub_resource type="AtlasTexture" id=32]
atlas = ExtResource( 2 )
region = Rect2( 144, 312, 24, 24 )

[sub_resource type="AtlasTexture" id=33]
atlas = ExtResource( 2 )
region = Rect2( 168, 312, 24, 24 )

[sub_resource type="SpriteFrames" id=34]
animations = [ {
"frames": [ SubResource( 20 ), SubResource( 21 ) ],
"loop": true,
"name": "idle",
"speed": 2.0
}, {
"frames": [ SubResource( 22 ) ],
"loop": true,
"name": "jump",
"speed": 5.0
}, {
"frames": [ SubResource( 23 ) ],
"loop": true,
"name": "jump_apex",
"speed": 5.0
}, {
"frames": [ SubResource( 24 ) ],
"loop": true,
"name": "jump_fall",
"speed": 5.0
}, {
"frames": [ SubResource( 25 ) ],
"loop": true,
"name": "jump_rise",
"speed": 5.0
}, {
"frames": [ SubResource( 26 ), SubResource( 27 ), SubResource( 28 ), SubResource( 29 ), SubResource( 30 ), SubResource( 31 ), SubResource( 32 ), SubResource( 33 ) ],
"loop": true,
"name": "run",
"speed": 9.0
} ]

[sub_resource type="AtlasTexture" id=35]
atlas = ExtResource( 2 )
region = Rect2( 0, 0, 24, 24 )

[sub_resource type="AtlasTexture" id=36]
atlas = ExtResource( 2 )
region = Rect2( 24, 0, 24, 24 )

[sub_resource type="AtlasTexture" id=37]
atlas = ExtResource( 2 )
region = Rect2( 0, 48, 24, 24 )

[sub_resource type="AtlasTexture" id=17]
atlas = ExtResource( 2 )
region = Rect2( 48, 48, 24, 24 )

[sub_resource type="AtlasTexture" id=18]
atlas = ExtResource( 2 )
region = Rect2( 72, 48, 24, 24 )

[sub_resource type="AtlasTexture" id=19]
atlas = ExtResource( 2 )
region = Rect2( 24, 48, 24, 24 )

[sub_resource type="AtlasTexture" id=8]
atlas = ExtResource( 2 )
region = Rect2( 0, 24, 24, 24 )

[sub_resource type="AtlasTexture" id=9]
atlas = ExtResource( 2 )
region = Rect2( 24, 24, 24, 24 )

[sub_resource type="AtlasTexture" id=10]
atlas = ExtResource( 2 )
region = Rect2( 48, 24, 24, 24 )

[sub_resource type="AtlasTexture" id=11]
atlas = ExtResource( 2 )
region = Rect2( 72, 24, 24, 24 )

[sub_resource type="AtlasTexture" id=12]
atlas = ExtResource( 2 )
region = Rect2( 96, 24, 24, 24 )

[sub_resource type="AtlasTexture" id=13]
atlas = ExtResource( 2 )
region = Rect2( 120, 24, 24, 24 )

[sub_resource type="AtlasTexture" id=14]
atlas = ExtResource( 2 )
region = Rect2( 144, 24, 24, 24 )

[sub_resource type="AtlasTexture" id=15]
atlas = ExtResource( 2 )
region = Rect2( 168, 24, 24, 24 )

[sub_resource type="AtlasTexture" id=38]
atlas = ExtResource( 2 )
region = Rect2( 0, 72, 24, 24 )

[sub_resource type="AtlasTexture" id=39]
atlas = ExtResource( 2 )
region = Rect2( 24, 72, 24, 24 )

[sub_resource type="AtlasTexture" id=40]
atlas = ExtResource( 2 )
region = Rect2( 0, 120, 24, 24 )

[sub_resource type="AtlasTexture" id=41]
atlas = ExtResource( 2 )
region = Rect2( 48, 120, 24, 24 )

[sub_resource type="AtlasTexture" id=42]
atlas = ExtResource( 2 )
region = Rect2( 72, 120, 24, 24 )

[sub_resource type="AtlasTexture" id=43]
atlas = ExtResource( 2 )
region = Rect2( 24, 120, 24, 24 )

[sub_resource type="AtlasTexture" id=44]
atlas = ExtResource( 2 )
region = Rect2( 0, 96, 24, 24 )

[sub_resource type="AtlasTexture" id=45]
atlas = ExtResource( 2 )
region = Rect2( 24, 96, 24, 24 )

[sub_resource type="AtlasTexture" id=46]
atlas = ExtResource( 2 )
region = Rect2( 48, 96, 24, 24 )

[sub_resource type="AtlasTexture" id=47]
atlas = ExtResource( 2 )
region = Rect2( 72, 96, 24, 24 )

[sub_resource type="AtlasTexture" id=48]
atlas = ExtResource( 2 )
region = Rect2( 96, 96, 24, 24 )

[sub_resource type="AtlasTexture" id=49]
atlas = ExtResource( 2 )
region = Rect2( 120, 96, 24, 24 )

[sub_resource type="AtlasTexture" id=50]
atlas = ExtResource( 2 )
region = Rect2( 144, 96, 24, 24 )

[sub_resource type="AtlasTexture" id=51]
atlas = ExtResource( 2 )
region = Rect2( 168, 96, 24, 24 )

[sub_resource type="AtlasTexture" id=52]
atlas = ExtResource( 2 )
region = Rect2( 0, 144, 24, 24 )

[sub_resource type="AtlasTexture" id=53]
atlas = ExtResource( 2 )
region = Rect2( 24, 144, 24, 24 )

[sub_resource type="AtlasTexture" id=54]
atlas = ExtResource( 2 )
region = Rect2( 0, 192, 24, 24 )

[sub_resource type="AtlasTexture" id=55]
atlas = ExtResource( 2 )
region = Rect2( 48, 192, 24, 24 )

[sub_resource type="AtlasTexture" id=56]
atlas = ExtResource( 2 )
region = Rect2( 72, 192, 24, 24 )

[sub_resource type="AtlasTexture" id=57]
atlas = ExtResource( 2 )
region = Rect2( 24, 192, 24, 24 )

[sub_resource type="AtlasTexture" id=58]
atlas = ExtResource( 2 )
region = Rect2( 0, 168, 24, 24 )

[sub_resource type="AtlasTexture" id=59]
atlas = ExtResource( 2 )
region = Rect2( 24, 168, 24, 24 )

[sub_resource type="AtlasTexture" id=60]
atlas = ExtResource( 2 )
region = Rect2( 48, 168, 24, 24 )

[sub_resource type="AtlasTexture" id=61]
atlas = ExtResource( 2 )
region = Rect2( 72, 168, 24, 24 )

[sub_resource type="AtlasTexture" id=62]
atlas = ExtResource( 2 )
region = Rect2( 96, 168, 24, 24 )

[sub_resource type="AtlasTexture" id=63]
atlas = ExtResource( 2 )
region = Rect2( 120, 168, 24, 24 )

[sub_resource type="AtlasTexture" id=64]
atlas = ExtResource( 2 )
region = Rect2( 144, 168, 24, 24 )

[sub_resource type="AtlasTexture" id=65]
atlas = ExtResource( 2 )
region = Rect2( 168, 168, 24, 24 )

[sub_resource type="AtlasTexture" id=66]
atlas = ExtResource( 2 )
region = Rect2( 0, 216, 24, 24 )

[sub_resource type="AtlasTexture" id=67]
atlas = ExtResource( 2 )
region = Rect2( 24, 216, 24, 24 )

[sub_resource type="AtlasTexture" id=68]
atlas = ExtResource( 2 )
region = Rect2( 0, 264, 24, 24 )

[sub_resource type="AtlasTexture" id=69]
atlas = ExtResource( 2 )
region = Rect2( 48, 264, 24, 24 )

[sub_resource type="AtlasTexture" id=70]
atlas = ExtResource( 2 )
region = Rect2( 72, 264, 24, 24 )

[sub_resource type="AtlasTexture" id=71]
atlas = ExtResource( 2 )
region = Rect2( 24, 264, 24, 24 )

[sub_resource type="AtlasTexture" id=72]
atlas = ExtResource( 2 )
region = Rect2( 0, 240, 24, 24 )

[sub_resource type="AtlasTexture" id=73]
atlas = ExtResource( 2 )
region = Rect2( 24, 240, 24, 24 )

[sub_resource type="AtlasTexture" id=74]
atlas = ExtResource( 2 )
region = Rect2( 48, 240, 24, 24 )

[sub_resource type="AtlasTexture" id=75]
atlas = ExtResource( 2 )
region = Rect2( 72, 240, 24, 24 )

[sub_resource type="AtlasTexture" id=76]
atlas = ExtResource( 2 )
region = Rect2( 96, 240, 24, 24 )

[sub_resource type="AtlasTexture" id=77]
atlas = ExtResource( 2 )
region = Rect2( 120, 240, 24, 24 )

[sub_resource type="AtlasTexture" id=78]
atlas = ExtResource( 2 )
region = Rect2( 144, 240, 24, 24 )

[sub_resource type="AtlasTexture" id=79]
atlas = ExtResource( 2 )
region = Rect2( 168, 240, 24, 24 )

[sub_resource type="SpriteFrames" id=16]
animations = [ {
"frames": [  ],
"loop": true,
"name": "0",
"speed": 5.0
}, {
"frames": [ SubResource( 35 ), SubResource( 36 ) ],
"loop": true,
"name": "1_idle",
"speed": 2.0
}, {
"frames": [ SubResource( 37 ) ],
"loop": true,
"name": "1_jump",
"speed": 5.0
}, {
"frames": [ SubResource( 17 ) ],
"loop": true,
"name": "1_jump_apex",
"speed": 5.0
}, {
"frames": [ SubResource( 18 ) ],
"loop": true,
"name": "1_jump_fall",
"speed": 5.0
}, {
"frames": [ SubResource( 19 ) ],
"loop": true,
"name": "1_jump_rise",
"speed": 5.0
}, {
"frames": [ SubResource( 8 ), SubResource( 9 ), SubResource( 10 ), SubResource( 11 ), SubResource( 12 ), SubResource( 13 ), SubResource( 14 ), SubResource( 15 ) ],
"loop": true,
"name": "1_run",
"speed": 9.0
}, {
"frames": [ SubResource( 38 ), SubResource( 39 ) ],
"loop": true,
"name": "2_idle",
"speed": 2.0
}, {
"frames": [ SubResource( 40 ) ],
"loop": true,
"name": "2_jump",
"speed": 5.0
}, {
"frames": [ SubResource( 41 ) ],
"loop": true,
"name": "2_jump_apex",
"speed": 5.0
}, {
"frames": [ SubResource( 42 ) ],
"loop": true,
"name": "2_jump_fall",
"speed": 5.0
}, {
"frames": [ SubResource( 43 ) ],
"loop": true,
"name": "2_jump_rise",
"speed": 5.0
}, {
"frames": [ SubResource( 44 ), SubResource( 45 ), SubResource( 46 ), SubResource( 47 ), SubResource( 48 ), SubResource( 49 ), SubResource( 50 ), SubResource( 51 ) ],
"loop": true,
"name": "2_run",
"speed": 9.0
}, {
"frames": [ SubResource( 52 ), SubResource( 53 ) ],
"loop": true,
"name": "3_idle",
"speed": 2.0
}, {
"frames": [ SubResource( 54 ) ],
"loop": true,
"name": "3_jump",
"speed": 5.0
}, {
"frames": [ SubResource( 55 ) ],
"loop": true,
"name": "3_jump_apex",
"speed": 5.0
}, {
"frames": [ SubResource( 56 ) ],
"loop": true,
"name": "3_jump_fall",
"speed": 5.0
}, {
"frames": [ SubResource( 57 ) ],
"loop": true,
"name": "3_jump_rise",
"speed": 5.0
}, {
"frames": [ SubResource( 58 ), SubResource( 59 ), SubResource( 60 ), SubResource( 61 ), SubResource( 62 ), SubResource( 63 ), SubResource( 64 ), SubResource( 65 ) ],
"loop": true,
"name": "3_run",
"speed": 5.0
}, {
"frames": [ SubResource( 66 ), SubResource( 67 ) ],
"loop": true,
"name": "4_idle",
"speed": 5.0
}, {
"frames": [ SubResource( 68 ) ],
"loop": true,
"name": "4_jump",
"speed": 5.0
}, {
"frames": [ SubResource( 69 ) ],
"loop": true,
"name": "4_jump_apex",
"speed": 5.0
}, {
"frames": [ SubResource( 70 ) ],
"loop": true,
"name": "4_jump_fall",
"speed": 5.0
}, {
"frames": [ SubResource( 71 ) ],
"loop": true,
"name": "4_jump_rise",
"speed": 5.0
}, {
"frames": [ SubResource( 72 ), SubResource( 73 ), SubResource( 74 ), SubResource( 75 ), SubResource( 76 ), SubResource( 77 ), SubResource( 78 ), SubResource( 79 ) ],
"loop": true,
"name": "4_run",
"speed": 5.0
} ]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 8, 10 )

[node name="player" type="KinematicBody2D"]
script = ExtResource( 1 )

[node name="sprite" type="AnimatedSprite" parent="."]
frames = SubResource( 34 )
animation = "idle"

[node name="hair_sprite" type="AnimatedSprite" parent="."]
frames = SubResource( 16 )
animation = "0"

[node name="collider" type="CollisionShape2D" parent="."]
position = Vector2( 0, 2 )
shape = SubResource( 1 )

[node name="hook_timer" type="Timer" parent="."]
one_shot = true

[node name="jump_timer" type="Timer" parent="."]
one_shot = true

[node name="coyote_timer" type="Timer" parent="."]
one_shot = true

[node name="delay_gravity_timer" type="Timer" parent="."]
one_shot = true

[node name="raycast" type="RayCast2D" parent="."]

[node name="hairline" type="Line2D" parent="."]
width = 4.0
default_color = Color( 1, 0, 0, 1 )

[node name="camera" type="Camera2D" parent="."]
current = true
smoothing_enabled = true
offset_v = -0.4

[node name="land_timer" type="Timer" parent="."]
one_shot = true
